--- a/client/src/assets/styles/_components/select.scss
+++ b/client/src/assets/styles/_components/select.scss
@@ -39,7 +39,7 @@
                     display: flex;
                     align-items: center;
                     gap: 10px;
-                    
+
                     svg {
                         height: 16px;
                         width: 16px;
@@ -78,6 +78,7 @@
             margin-top: 10px;
             padding: 0px;
             width: 100%;
+            z-index: 99;
             
             &.options {
                 display: none;
