--- a/client/src/assets/styles/_components/exchange.scss
+++ b/client/src/assets/styles/_components/exchange.scss
@@ -53,6 +53,7 @@
             color: $white;
             border: none;
             border-radius: 8px;
+            cursor: pointer;
         }
     }
 }
