--- a/client/src/assets/styles/app.scss
+++ b/client/src/assets/styles/app.scss
@@ -13,4 +13,16 @@
             color: $dark;
         }
     }
+
+    .feedback {
+        width: 100;
+        height: 21px;
+        background-color: $primary;
+        color: $white;
+        padding: 20px;
+        text-align: center;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 21px;
+    }
 }
