--- a/client/src/assets/styles/_components/exchange.scss
+++ b/client/src/assets/styles/_components/exchange.scss
@@ -56,4 +56,35 @@
             cursor: pointer;
         }
     }
+
+    @media screen and (max-width:480px) {
+        
+            padding: 0 24px;
+
+            h1 {
+                margin-top: 36px;
+            }
+
+            .toolbar {
+                margin-top: 24px;
+                display: flex;
+                align-items: start;
+                justify-content: start;
+                flex-direction: column;
+                
+                .formInput{
+                    width: 100%;
+                }
+
+                span.equals {
+                    display: none;
+                }
+
+                button.save {
+                    width: 100%;
+                    margin-bottom: 48px;
+                }
+            }
+        
+    }
 }
