--- a/client/src/assets/styles/_components/table.scss
+++ b/client/src/assets/styles/_components/table.scss
@@ -53,4 +53,54 @@
         }
 
     }
+
+    @media screen and (max-width:480px) {
+        display: none;
+    }
+}
+
+.transactions {
+    display: none;
+
+    @media screen and (max-width:480px) {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 20px;
+
+        .item {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            padding: 12px 16px;
+            background-color: #EFF0F6;
+            border-radius: 6px;
+
+            .currency {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 24px;
+                position: relative;
+
+                .status {
+                    padding: 5px;
+                    width: 5px;
+                    height: 5px;
+                    border-radius: 50%;
+                    background-color: $primary;
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                }
+            }
+
+            .amount {
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 152.2%;
+            }
+        }
+        
+    }
 }
