--- a/client/src/assets/styles/app.scss
+++ b/client/src/assets/styles/app.scss
@@ -15,7 +15,7 @@
     }
 
     .feedback {
-        width: 100;
+        width: 100%;
         height: 21px;
         background-color: $primary;
         color: $white;
@@ -24,5 +24,20 @@
         font-weight: 700;
         font-size: 16px;
         line-height: 21px;
+    }
+
+    @media screen and (max-width:480px) {
+        .down {
+            padding: 0 24px;
+        }
+
+        h1 {
+            padding-top: 24px;
+        }
+
+        .feedback {
+            display: none;
+        }
+           
     }
 }
