filter and sort data

--- a/client/src/assets/styles/_components/pagination.scss
+++ b/client/src/assets/styles/_components/pagination.scss
@@ -14,6 +14,10 @@
                  display: flex;
                  margin: 0 1px;
 
+                 &.hide {
+                     display: none;
+                 }
+
                  button {
                      display: flex;
                      align-items: center;
