--- a/client/src/assets/styles/_components/select.scss
+++ b/client/src/assets/styles/_components/select.scss
@@ -44,6 +44,7 @@
                     svg {
                         height: 16px;
                         width: 16px;
+                        border-radius: 50%;
                     }
                 }
 
@@ -95,6 +96,10 @@
                 gap: 8px;
                 padding: 12px 20px;
                 position: relative;
+
+                svg {
+                    border-radius: 50%;
+                }
                 
                 &::after {
                     width: 100%; 
